--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -4,13 +4,36 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
  */
 header {
-  padding: 156px 0 100px;
+  padding: 250px 0 200px;
 }
 
 section {
-  padding: 150px 0;
+  padding: 70px 0;
 }
 
-.navbar {
-  display: none;
+#header {
+  background-color: #f2a365;
+  color: #ececec;
+}
+
+.lead {
+  color: #222831;
+}
+
+#quote {
+  background-color: #30475e;
+  color: #ececec;
+}
+
+.scroll-down-pointer {
+  color: white;
+}
+
+.inspirational-quote {
+  font-style: italic;
+  font-size: 1.2rem;
+}
+
+.inspirational-quote-author {
+  margin-top: 40px;
 }
